Final before recording a Showcase video

--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
       border-color: #444;
     }
 
-    /* Новые стили для чекбокса тёмного режима */
     .dark-mode-label {
       display: inline-flex;
       align-items: center;
@@ -219,7 +218,7 @@
     <button onclick="clearForm()">Clear</button>
     <label class="dark-mode-label" for="darkModeToggle">
       <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
-      <span>🌙 Dark Mode</span>
+      <span>Dark Mode</span>
     </label>
 
     <!-- Output -->
