--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       align-items: flex-start;
       min-height: 100vh;
     }
-
     .container {
       width: 95%;
       max-width: 1200px;
@@ -26,21 +25,18 @@
       border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-
     h1 {
       font-size: 2.5em;
       margin-bottom: 20px;
       color: #2e97ff;
       text-align: center;
     }
-
     label {
       font-weight: bold;
       display: block;
       margin: 10px 0 5px;
       text-align: left;
     }
-
     textarea, select, input {
       width: 100%;
       padding: 10px;
@@ -50,7 +46,6 @@
       margin-bottom: 15px;
       box-sizing: border-box;
     }
-
     button {
       background-color: #007bff;
       color: white;
@@ -62,35 +57,35 @@
       margin: 10px 10px 0 0;
       transition: background-color 0.3s ease;
     }
-
     button:hover {
       background-color: #0056b3;
     }
-
     .loading {
       display: none;
       margin: 20px 0;
       text-align: center;
     }
-
     .section {
       margin-top: 40px;
     }
-
+    .scene {
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 10px;
+    }
     .scene h3 {
       margin-bottom: 15px;
       font-size: 1.6em;
       border-bottom: 2px solid #ccc;
       padding-bottom: 5px;
     }
-
     .shots-container {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
       justify-content: flex-start;
     }
-
     .shot-card {
       flex: 1 1 300px;
       border: 1px solid #ccc;
@@ -98,23 +93,24 @@
       padding: 10px;
       background-color: #fff;
     }
-
     .shot-card img {
       width: 100%;
       border-radius: 8px;
       margin-bottom: 10px;
     }
-
+    .edit-scene {
+      margin-top: 10px;
+      border-top: 1px dashed #ccc;
+      padding-top: 10px;
+    }
     .dark-mode {
       background-color: #121212;
       color: #eee;
     }
-
     .dark-mode .container {
       background-color: #1e1e1e;
       color: #eee;
     }
-
     .dark-mode textarea,
     .dark-mode select,
     .dark-mode input,
@@ -123,38 +119,24 @@
       color: #eee;
       border: 1px solid #444;
     }
-
     .dark-mode .shot-card {
       background-color: #2a2a2a;
       border-color: #444;
     }
-
     .dark-mode-label {
       display: inline-flex;
       align-items: center;
       margin-left: 20px;
       cursor: pointer;
     }
-
     .dark-mode-label input[type="checkbox"] {
       margin-right: 8px;
       width: 18px;
       height: 18px;
     }
-
     .dark-mode-label span {
       font-size: 16px;
     }
-
-    .dark-mode .dark-mode-label {
-      color: #eee;
-    }
-
-    .dark-mode .dark-mode-label input[type="checkbox"] {
-      background-color: #2b2b2b;
-      border: 1px solid #444;
-    }
-
     footer {
       margin-top: 40px;
       font-size: 13px;
@@ -176,26 +158,20 @@
       <h3>Character Editor</h3>
       <label for="charName">Name:</label>
       <input type="text" id="charName" placeholder="e.g. Anna">
-
       <label for="charAppearance">Appearance:</label>
       <input type="text" id="charAppearance" placeholder="e.g. red armor, short black hair">
-
       <label for="charOutfit">Outfit:</label>
       <input type="text" id="charOutfit" placeholder="e.g. pilot suit with helmet">
-
       <label for="charPersonality">Personality:</label>
       <input type="text" id="charPersonality" placeholder="e.g. brave, determined">
-
       <label for="charMotivation">Motivation:</label>
       <input type="text" id="charMotivation" placeholder="e.g. survive and uncover secrets">
-
       <button onclick="generateCharacter()">Generate Character Description</button>
-
       <label for="characterInput">Main Character Description:</label>
       <textarea id="characterInput" placeholder="Will be auto-filled by editor above"></textarea>
     </div>
 
-    <!-- Style and Camera -->
+    <!-- Global Style and Camera -->
     <label for="cameraSelect">Default Camera Angle:</label>
     <select id="cameraSelect">
       <option value="wide shot">Wide Shot</option>
@@ -204,7 +180,6 @@
       <option value="over-the-shoulder">Over-the-Shoulder</option>
       <option value="establishing shot">Establishing Shot</option>
     </select>
-
     <label for="styleSelect">Select Style:</label>
     <select id="styleSelect">
       <option value="cinematic">Cinematic</option>
@@ -213,7 +188,7 @@
       <option value="comic">Comic</option>
     </select>
 
-    <!-- Generate -->
+    <!-- Generate Storyboard -->
     <button id="generateBtn" onclick="generateStoryboard()">Generate Storyboard</button>
     <button onclick="clearForm()">Clear</button>
     <label class="dark-mode-label" for="darkModeToggle">
@@ -221,7 +196,7 @@
       <span>Dark Mode</span>
     </label>
 
-    <!-- Output -->
+    <!-- Output Section -->
     <div id="loading" class="loading">🔄 Generating storyboard, please wait...</div>
     <h2 id="resultsTitle" style="margin-top: 40px; display:none;">Generated Storyboard:</h2>
     <div id="output"></div>
@@ -230,7 +205,6 @@
       Powered by OpenAI (GPT + DALL·E 3) | Made by Alex Usenko – AI Elective 2025
     </footer>
   </div>
-
   <script src="script.js"></script>
   <script>
     function clearForm() {
@@ -257,10 +231,9 @@
       const outfit = document.getElementById("charOutfit").value;
       const personality = document.getElementById("charPersonality").value;
       const motivation = document.getElementById("charMotivation").value;
-
       const description = `${name}, ${personality} character wearing ${outfit}, with ${appearance}. Motivated by ${motivation}.`;
       document.getElementById("characterInput").value = description;
     }
   </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9249b1353f88676f',t:'MTc0MjY4ODQ4NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
